--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
           </li>
 
           <li>
-            <a class="header__resume btn" href="#">Resume</a>
+            <a class="header__resume bn5" href="coming.html" target="_blank"
+              >Resume</a
+            >
           </li>
         </ul>
 
@@ -66,8 +68,9 @@
       </nav>
     </header>
 
-    <!-- main hero -->
     <main>
+      <div></div>
+      <!-- hero -->
       <section class="hero container">
         <img class="hero__img" src="/foto sacha.jpg" alt="" />
         <h2 class="hero__subtitle">👋 Hey! I'm Sacha 🎉</h2>
@@ -85,14 +88,14 @@
           learning and growing together in this dynamic field!
         </p>
         <a
-          class="hero__btn btn"
+          class="hero__btn bn5"
           href="https://linktr.ee/sachaahsan"
           target="_blank"
           >reach out</a
         >
       </section>
 
-      <!-- main about -->
+      <!-- about -->
       <section class="about container section">
         <div class="about__content">
           <h2 class="about__title">About</h2>
@@ -116,7 +119,7 @@
             where this journey takes me in the vibrant world of web development!
           </p>
 
-          <!-- main about technologies -->
+          <!-- about technologies -->
           <hr class="about__hr" />
           <h3 class="about__subtitle">Technologies</h3>
           <div class="about__ul-container">
@@ -137,11 +140,36 @@
         </div>
       </section>
 
-      <section></section>
+      <!-- projects -->
+      <section class="work container section">
+        <h2 class="work__title">Projects</h2>
+        <p class="work__description">
+          Mollit pariatur tempor nisi dolor non consequat magna cupidatat
+          reprehenderit. Aliquip excepteur ullamco aliquip magna est et commodo
+          deserunt ipsum.
+        </p>
+
+        <!-- project 1 -->
+        <h3>Black Jack</h3>
+        <img src="public/Black Jack SS.jpg" alt="BlackJack Website" />
+        <p>
+          Labore magna ut non labore Lorem nisi culpa sint et quis sint. Enim
+          pariatur deserunt do ad exercitation.
+        </p>
+        <p>
+          Ea ut non cupidatat consequat sint elit ipsum culpa dolor cillum
+          commodo. Do esse excepteur cillum deserunt duis incididunt. Eu tempor
+          ullamco aliqua consectetur incididunt anim dolor sunt laboris
+          adipisicing cupidatat sint.
+        </p>
+        <a class="bn5" href="#">Website</a>
+      </section>
+
       <section></section>
       <section></section>
     </main>
     <footer></footer>
     <script type="module" src="src/main.js"></script>
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
   </body>
 </html>
