--- a/index.html
+++ b/index.html
@@ -146,11 +146,7 @@
       <!------------ projects ------------>
       <section id="work" class="work container section">
         <h2 class="work__title">Projects</h2>
-        <p class="work__description">
-          Mollit pariatur tempor nisi dolor non consequat magna cupidatat
-          reprehenderit. Aliquip excepteur ullamco aliquip magna est et commodo
-          deserunt ipsum.
-        </p>
+        <p class="work__description"></p>
 
         <div class="work__container">
           <!------------ project 1 ------------>
