--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
       href="https://api.fontshare.com/v2/css?f[]=general-sans@500,600,400,700&display=swap"
       rel="stylesheet"
     />
@@ -75,7 +79,7 @@
       <div></div>
       <!------------ hero ------------>
       <section class="hero container">
-        <img class="hero__img" src="/public/me 3.jpg" alt="" />
+        <img class="hero__img" src="/me 3.jpg" alt="" />
         <h2 class="hero__subtitle">👋 Hey! I'm Sacha 🎉</h2>
         <h1 class="hero__title">
           FRONT-END <br />
@@ -127,19 +131,41 @@
           <h3 class="about__subtitle">Technologies</h3>
           <div class="about__ul-container">
             <ul class="about__ul">
-              <li class="about__list">HTML</li>
-              <li class="about__list">CSS</li>
-              <li class="about__list">JavaScript</li>
+              <li class="about__list">
+                <i class="fab fa-html5 icon-html"></i> HTML
+              </li>
+              <li class="about__list">
+                <i class="fab fa-css3-alt icon-css"></i> CSS
+              </li>
+              <li class="about__list">
+                <i class="fab fa-js icon-js"></i> JavaScript
+              </li>
             </ul>
             <ul class="about__ul">
-              <li class="about__list">React.js (Beginner)</li>
-              <li class="about__list">Tailwind (Beginner)</li>
-              <li class="about__list">Figma</li>
+              <li class="about__list">
+                <i class="fab fa-react icon-react"></i> React
+              </li>
+              <li class="about__list">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Tailwind_CSS_Logo.svg"
+                  class="icon-tailwind"
+                  alt="Tailwind CSS Logo"
+                />
+                Tailwind CSS
+              </li>
+              <li class="about__list">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg"
+                  class="icon-figma"
+                  alt="Figma Logo"
+                />
+                Figma
+              </li>
             </ul>
           </div>
         </div>
         <div class="about__img-wrapper">
-          <img class="about__img" src="public/other me 2.jpg" alt="" />
+          <img class="about__img" src="/other me 2.jpg" alt="" />
         </div>
       </section>
 
@@ -152,7 +178,7 @@
           <!------------ project 1 ------------>
           <h3 class="work__project-title">Blackjack</h3>
           <div class="work__img-wrapper work__image1">
-            <img src="public/blackjack.jpg" alt="BlackJack Website" />
+            <img src="/blackjack.jpg" alt="BlackJack Website" />
           </div>
           <div class="work__project work__content1">
             <h3 class="work__project-subtitle">Blackjack</h3>
@@ -179,7 +205,7 @@
           <!------------ project 2 ------------>
           <h3 class="work__project-title">Friskay</h3>
           <div class="work__img-wrapper work__image2">
-            <img src="public/friskay thumbnail.png" alt="Friskay Website" />
+            <img src="/friskay thumbnail.png" alt="Friskay Website" />
           </div>
           <div class="work__project work__content2">
             <h3 class="work__project-subtitle">Friskay</h3>
@@ -206,7 +232,7 @@
           <!------------ project 3 ------------>
           <h3 class="work__project-title">Number Guessing</h3>
           <div class="work__img-wrapper work__image3">
-            <img src="public/number guess (4).jpg" alt="BlackJack Website" />
+            <img src="/number guess (4).jpg" alt="BlackJack Website" />
           </div>
           <div class="work__project work__content3">
             <h3 class="work__project-subtitle">Number Guessing</h3>
