--- a/index.html
+++ b/index.html
@@ -256,17 +256,26 @@
         </div>
       </section>
 
-      <section class="contact container section">
-        <!-- <a
+      <section id="contact" class="contact container section">
+        <h2 class="contact__title">Get In Contact</h2>
+        <p class="contact__description">
+          Whether you are starting a project, have business inquiries or just
+          want to say hi, my inbox is always open so feel free to reach out and
+          I will get back to you as soon as possible.
+        </p>
+        <a
           class="bn5 work_project-button"
           href="mailto:sachas4f@gmail.com"
           target="_blank"
-          >Mail</a
-        > -->
+          >Reach Out</a
+        >
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer container section">
+      <h3 class="footer__title">~ Sacha Ahsan ~</h3>
+    </footer>
+
     <script type="module" src="src/main.js"></script>
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
   </body>
