--- a/index.html
+++ b/index.html
@@ -74,7 +74,44 @@
         </button>
       </nav>
     </header>
-
+    <!-- mobile navigation -->
+    <!-- <div class="mobile-nav">
+      <nav>
+        <ul class="mobile-nav__menu">
+          <li>
+            <a class="mobile-nav__link" href="#about">About</a>
+          </li>
+          <li>
+            <a class="mobile-nav__link" href="#work">Projects</a>
+          </li>
+          <li>
+            <a class="mobile-nav__link" href="#contact">Contact</a>
+          </li>
+          <li class="mobile-nav__link-line"></li>
+          <li>
+            <button class="mobile-nav__sun">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
+                />
+              </svg>
+            </button>
+          </li>
+          <li>
+            <a class="mobile-nav__btn btn" href="">Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </div> -->
+    <!-- end of mobile navigation -->
     <main>
       <div></div>
       <!------------ hero ------------>
@@ -175,33 +212,6 @@
         <p class="work__description"></p>
 
         <div class="work__container">
-          <!------------ project 1 ------------>
-          <h3 class="work__project-title">Blackjack</h3>
-          <div class="work__img-wrapper work__image1">
-            <img src="/blackjack.jpg" alt="BlackJack Website" />
-          </div>
-          <div class="work__project work__content1">
-            <h3 class="work__project-subtitle">Blackjack</h3>
-            <p class="work_project-description1">
-              With guidance from a Scrimba course, I created a simple card game
-              website that's kinda like Blackjack, using HTML, CSS, and
-              JavaScript.
-            </p>
-            <p class="work_project-description2">
-              I implemented core game mechanics, added sound effects, and
-              developed a money or chips system to enhance the gameplay
-              experience. This project highlights my ability to learn javascript
-              and apply that knowledge to develop functional and engaging web
-              applications.
-            </p>
-            <a
-              class="bn5 work_project-button"
-              href="https://sikoo54.github.io/BLACK-JACK/"
-              target="_blank"
-              >Website</a
-            >
-          </div>
-
           <!------------ project 2 ------------>
           <h3 class="work__project-title">Friskay</h3>
           <div class="work__img-wrapper work__image2">
@@ -224,6 +234,33 @@
             <a
               class="bn5 work_project-button"
               href="https://sikoo54.github.io/friskay-website/"
+              target="_blank"
+              >Website</a
+            >
+          </div>
+
+          <!------------ project 1 ------------>
+          <h3 class="work__project-title">Blackjack</h3>
+          <div class="work__img-wrapper work__image1">
+            <img src="/blackjack.jpg" alt="BlackJack Website" />
+          </div>
+          <div class="work__project work__content1">
+            <h3 class="work__project-subtitle">Blackjack</h3>
+            <p class="work_project-description1">
+              With guidance from a Scrimba course, I created a simple card game
+              website that's kinda like Blackjack, using HTML, CSS, and
+              JavaScript.
+            </p>
+            <p class="work_project-description2">
+              I implemented core game mechanics, added sound effects, and
+              developed a money or chips system to enhance the gameplay
+              experience. This project highlights my ability to learn javascript
+              and apply that knowledge to develop functional and engaging web
+              applications.
+            </p>
+            <a
+              class="bn5 work_project-button"
+              href="https://sikoo54.github.io/BLACK-JACK/"
               target="_blank"
               >Website</a
             >
@@ -264,7 +301,7 @@
           I will get back to you as soon as possible.
         </p>
         <a
-          class="bn5 work_project-button"
+          class="bn5 contact-button"
           href="mailto:sachas4f@gmail.com"
           target="_blank"
           >Reach Out</a
