--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </li>
           <li class="header__line"></li>
 
-          <li>
+          <!-- <li>
             <button class="header__sun">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -47,13 +47,10 @@
                 />
               </svg>
             </button>
-          </li>
+          </li> -->
 
           <li>
-            <a
-              class="header__resume bn5"
-              href="public/Resume.pdf"
-              target="_blank"
+            <a class="header__resume bn5" href="/Resume.pdf" target="_blank"
               >Resume</a
             >
           </li>
@@ -152,9 +149,8 @@
           <p class="about__description">
             I'm currently on a journey of learning various front end
             technologies and tools. From the basics of HTML, CSS, and JavaScript
-            to exploring advanced frameworks like React and Vue.js, I'm
-            dedicated to mastering the skills needed to create captivating web
-            experiences.
+            to exploring advanced frameworks like React, I'm dedicated to
+            mastering the skills needed to create captivating web experiences.
           </p>
           <p class="about__description">
             Even though I'm a junior, I'm determined to grow and become a
@@ -180,7 +176,7 @@
             </ul>
             <ul class="about__ul">
               <li class="about__list">
-                <i class="fab fa-react icon-react"></i> React
+                <i class="fab fa-react icon-react"></i> React (Beginner)
               </li>
               <li class="about__list">
                 <img
