resume and header update

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             </button>
           </li> -->
 
+          <li class="header__line2"></li>
+
           <li>
             <a class="header__resume bn5" href="/Resume.pdf" target="_blank"
               >Resume</a
@@ -56,7 +58,7 @@
           </li>
         </ul>
 
-        <button class="header__bars">
+        <!-- <button class="header__bars">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
@@ -68,7 +70,7 @@
               clip-rule="evenodd"
             />
           </svg>
-        </button>
+        </button> -->
       </nav>
     </header>
     <!-- mobile navigation -->
