project + icon update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sacha's Portofolio</title>
+    <title>Ahsan's Portofolio</title>
   </head>
 
   <body>
@@ -178,7 +178,7 @@
             </ul>
             <ul class="about__ul">
               <li class="about__list">
-                <i class="fab fa-react icon-react"></i> React (Beginner)
+                <i class="fab fa-react icon-react"></i> React
               </li>
               <li class="about__list">
                 <img
@@ -210,6 +210,33 @@
         <p class="work__description"></p>
 
         <div class="work__container">
+          <!------------ project 1 ------------>
+          <h3 class="work__project-title">LalapLah!</h3>
+          <div class="work__img-wrapper work__image1">
+            <img src="/lalaplah2.png" alt="LalapLah! Website" />
+          </div>
+          <div class="work__project work__content1">
+            <h3 class="work__project-subtitle">LalapLah!</h3>
+            <p class="work_project-description1">
+              The Friskay Cat Food website, a modern and user-friendly platform
+              showcasing premium cat food products. The design was meticulously
+              crafted in Figma.
+            </p>
+            <p class="work_project-description2">
+              focusing on visual appeal and intuitive navigation. Utilizing HTML
+              and CSS, I ensured a clean and attractive layout. To enhance the
+              user experience, I integrated a JavaScript library for smooth
+              scrolling, providing seamless transitions and an engaging browsing
+              experience.
+            </p>
+            <a
+              class="bn5 work_project-button"
+              href="https://lalaplah.vercel.app/"
+              target="_blank"
+              >Website</a
+            >
+          </div>
+
           <!------------ project 2 ------------>
           <h3 class="work__project-title">Friskay</h3>
           <div class="work__img-wrapper work__image2">
@@ -237,12 +264,12 @@
             >
           </div>
 
-          <!------------ project 1 ------------>
+          <!------------ project 3 ------------>
           <h3 class="work__project-title">Blackjack</h3>
-          <div class="work__img-wrapper work__image1">
+          <div class="work__img-wrapper work__image3">
             <img src="/blackjack.jpg" alt="BlackJack Website" />
           </div>
-          <div class="work__project work__content1">
+          <div class="work__project work__content3">
             <h3 class="work__project-subtitle">Blackjack</h3>
             <p class="work_project-description1">
               With guidance from a Scrimba course, I created a simple card game
@@ -264,12 +291,12 @@
             >
           </div>
 
-          <!------------ project 3 ------------>
+          <!------------ project 4 ------------>
           <h3 class="work__project-title">Number Guessing</h3>
-          <div class="work__img-wrapper work__image3">
+          <div class="work__img-wrapper work__image4">
             <img src="/number guess (4).jpg" alt="BlackJack Website" />
           </div>
-          <div class="work__project work__content3">
+          <div class="work__project work__content4">
             <h3 class="work__project-subtitle">Number Guessing</h3>
             <p class="work_project-description1">
               Experience the thrill of the Number Guessing Game, where players
